--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "heroicons": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
