--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@heroicons/vue": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "heroicons": "^2.1.1",
     "nanoid": "^5.0.6",
